# zero2prod

./: .env  Cargo.toml  README.md  configuration.yaml  docker-compose.yaml  spec.yaml
migrations/: 20200903201725_create_subscriptions_table.sql  20220910053914_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: healthz.rs  mod.rs  subscriptions.rs
tests/: healthz.rs  subscriptions.rs
tests/all/: helpers.rs  main.rs
