[package]
name = "zero2prod"
version = "0.1.0"
authors = ["William Gough <williamhenrygough@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"

[dev-dependencies]
reqwest = "0.10.8"
tokio = "0.2.22"
